--- a/pre-entrega-1/package.json
+++ b/pre-entrega-1/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "pre-entrega-1",
+  "name": "pre-entregas",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/main.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/app.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.19.2",
-    "uuid": "^10.0.0"
-  },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.0.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
